[package]
name = "tokio-pg-mapper"
version = "0.2.0"
description = "Proc-macro library used to map a tokio-postgres row to a Rust type (struct)"
authors = ["Darin Gordon <dkcdkg@gmail.com>", "Zeyla Hellyer <zeyla@hellyer.dev>"]
repository = "https://www.github.com/Dowwie/tokio-postgres-mapper"
homepage = "https://www.github.com/Dowwie/tokio-postgres-mapper"
license = "ISC"
keywords = ["tokio", "postgres", "mapper"]
edition = "2018"

[lib]
doctest = false

[dependencies]
tokio-postgres = { git = "https://github.com/PG-kura/rust-postgres.git", branch = "reduce-log2" }
tokio-pg-mapper-derive = { git = "https://github.com/PG-kura/tokio-postgres-mapper.git", branch = "master", optional = true }

[features]
derive = ["tokio-pg-mapper-derive"]
